# PINGVerter

./: .gitattributes  .gitignore  MANIFEST.in  README.md  jsf_spec_revR.txt  pyproject.toml  setup copy.py  setup.cfg  setup.py  xtf_spec_rev42.txt
.github/workflows/: publish-to-pypi.yml
pingverter/: PINGVerter.code-workspace  __init__.py  _version.py  cerulean_class.py  converter.py  garmin_class.py  humminbird_class.py  jsf_class.py  lowrance_class.py  lowrance_class_archive.py  sdf_class.py  sonar_class.py  verter_utils.py  xtf_class.py
