[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pingverter"
dynamic = ["version"]
readme = {file = "README.md", content_type = "text/markdown"}
description = "A Python-based converter for sonar logs - PINGMapper dependency"
license = { file = "LICENSE" }
authors = [{ name = "Cameron Bodine", email = "bodine.cs@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Oceanography",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology"
]
keywords = [
    "pingmapper",
    "sonar",
    "ecology",
    "remotesensing",
    "sidescan",
    "sidescan-sonar",
    "aquatic",
    "humminbird",
    "lowrance",
    "gis",
    "oceanography",
    "limnology",
]
dependencies = [
    "numpy",
    "pandas",
    "pyproj",
    "joblib"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = []

[project.urls]
Repository = "https://github.com/CameronBodine/PINGVerter"
Issues = "https://github.com/CameronBodine/PINGVerter/issues"

[tool.setuptools.dynamic]
version = {attr = "pingverter.__version"}
